[project]
name = "cerbos-pypika"
description = "PyPika adapter for generating queries with Cerbos: an open core, language-agnostic, scalable authorization solution"
authors = [
    {name = "Cerbos Developers", email = "sdk+pypika@cerbos.dev"},
]
dependencies = [
    "pypika>=0.48.0",
    "cerbos>=0.10.4",
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
readme = "README.md"
license = {text = "Apache-2.0"}
dynamic = ["version"]

[project.urls]
Homepage = "https://cerbos.dev"
Repository = "https://github.com/cerbos/query-plan-adapters/tree/main/pypika"

[project.optional-dependencies]
testcontainers = [
    "testcontainers>=3.5.3",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]

[tool.pdm]

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "testcontainers>=3.5.3",
]
lint = [
    "black>=22.6.0",
    "isort>=5.10.1",
]
tools = [
    "ptpython>=3.0.25",
]

[tool.pdm.scripts]
test = "pytest"
isort = {cmd = "isort ."}
black = {cmd = "black ."}
format = {composite = ["isort", "black"]}

[tool.isort]
profile = 'black'
