[project]
name = "cerbos-sqlalchemy"
description = "SQLAlchemy adapter for generating queries with Cerbos: an open core, language-agnostic, scalable authorization solution"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Cerbos Developers", email = "sdk+sqlalchemy@cerbos.dev" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["sqlalchemy>=1.4", "cerbos>=0.10.4"]
dynamic = ["version"]

[project.urls]
Homepage = "https://cerbos.dev"
Repository = "https://github.com/cerbos/query-plan-adapters/tree/main/sqlalchemy"

[project.optional-dependencies]
testcontainers = ["testcontainers>=3.5.3"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = ".."
tag_regex = "^sqla/v(?P<version>\\d+\\.\\d+\\.\\d+.*)$"

[dependency-groups]
dev = [
    "pytest>=7.1.2",
    "black>=22.6.0",
    "isort>=5.10.1",
    "ptpython>=3.0.25",
    "mypy>=1.14.1",
    "ruff>=0.14.6",
    "pyright>=1.1.407",
    "testcontainers>=3.7.1",
]

[tool.isort]
profile = "black"
